--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -27,6 +27,6 @@
   }
 
   .text {
-    @apply text-[#1B1F23B2] font-normal text-base;
+    @apply text-[#1B1F23B2] font-normal text-base leading-5;
   }
 }
